# Sublyne

./: .gitattributes  .gitignore  .golangci.yml  LICENSE  README.md  RELEASE_NOTES.md
.claude/: CLAUDE.md
.claude/skills/building-and-releasing/: SKILL.md
.claude/skills/db-migrations/: SKILL.md
.claude/skills/linting-and-testing/: SKILL.md
.claude/skills/log-hygiene/: SKILL.md
.claude/skills/perf-and-profiling/: SKILL.md
.claude/skills/raw-sockets-and-spoofing/: SKILL.md
.claude/skills/rust-go-ipc/: SKILL.md
.claude/skills/socks5-upload/: SKILL.md
.claude/skills/web-panel-components/: SKILL.md
.claude/skills/wireguard-config-handling/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  release.yml
control-plane/: go.mod  go.sum
control-plane/cmd/sublyne/: main.go  main_test.go
control-plane/internal/api/: audit_handlers.go  audit_handlers_test.go  auth_handlers.go  auth_handlers_test.go  backup_handlers.go  backup_handlers_test.go  broadcast.go  broadcast_test.go  crash_recoverer.go  crash_recoverer_test.go  json.go  logs_handlers.go  logs_handlers_test.go  metrics_handlers.go  metrics_handlers_test.go  middleware.go  router.go  router_test.go  settings_handlers.go  socks5_handlers.go  socks5_handlers_test.go  testdb_test.go  tunables_handlers.go  tunables_handlers_test.go  tunnel_handlers.go  tunnel_handlers_test.go  wg_handlers.go  wg_handlers_test.go
control-plane/internal/audit/: audit.go  audit_test.go
control-plane/internal/auth/: argon2.go  argon2_test.go  bootstrap.go  bootstrap_test.go  jwt.go  jwt_test.go  ratelimit.go  ratelimit_test.go  store.go  store_test.go  testdb_test.go  tolerant_time_test.go
control-plane/internal/config/: config.go  config_test.go
control-plane/internal/dataplane/: addr.go  helpers_for_test.go  manager.go  manager_test.go
control-plane/internal/dataplaneasset/: doc.go  embed.go  embed_dev.go
control-plane/internal/db/: db.go  db_test.go
control-plane/internal/ipc/: client.go  client_test.go  codec.go  codec_test.go  protocol.go  supervisor.go  supervisor_test.go
control-plane/internal/logging/: bus.go  bus_test.go  crash.go  crash_test.go  level.go  level_runtime_test.go  logging.go  logging_test.go
control-plane/internal/metrics/: ring.go  ring_test.go
control-plane/internal/migrations/: 0001_init.sql  0002_tunnels.sql  0003_wg_configs.sql  0004_audit_log.sql  0005_icmp_echo_mode.sql  0006_socks5_proxies.sql  0007_upload_listen_mode.sql  0008_socks5_hardening.sql  0009_upload_matrix.sql  0010_multiport.sql  0011_unified_ports.sql  0012_forward_protocol.sql  migrations.go  migrations_test.go
control-plane/internal/socks5/: repo.go  repo_test.go
control-plane/internal/tunnels/: cache.go  forward.go  forward_test.go  model.go  repo.go  repo_test.go  validation.go  validation_test.go
control-plane/internal/webassets/: embed.go  embed_dev.go  spa.go  spa_test.go
control-plane/internal/wg/: config.go  config_test.go  device_config_test.go  manager.go  manager_linux.go  manager_stub.go  parser.go  policy.go  policy_test.go  repo.go  repo_test.go
data-plane/: Cargo.toml  deny.toml  rust-toolchain.toml
data-plane/src/: batch.rs  hmac.rs  icmp_id.rs  icmp_sysctl.rs  ipc.rs  lib.rs  main.rs  manager.rs  memory.rs  metrics.rs  multiport.rs  perf.rs  ping_smoothing.rs  protocol.rs  rst_suppress.rs  session.rs  spec.rs  time_util.rs
data-plane/src/forward/: channel.rs  conv.rs  engine.rs  kcp.rs  mod.rs  quic.rs  tuning.rs
data-plane/src/transport/: icmp.rs  icmpv6.rs  mod.rs  tcp_syn.rs  udp.rs
data-plane/src/tunnel/: client.rs  mod.rs  remote.rs
data-plane/src/upload/: mod.rs  socks5.rs  wireguard.rs
data-plane/tests/: forward_kcp_loopback.rs  forward_kcp_multiport_loopback.rs  forward_quic_loopback.rs  forward_quic_multiport_loopback.rs  ipc_ping.rs  log_level_reload.rs  loopback.rs  loopback_socks5.rs  socks5_window_throughput.rs  upload_stream_diag.rs
docs/: multiport.md  performance-backlog.md  upload-download-matrix.md  upload-throughput-diagnosis.md  v4-audit-findings.md  v4-hardware-test.md  v4.0.0-tcp-forwarding.md
frontend/: .prettierignore  .prettierrc.json  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/assets/css/: main.css
frontend/components/dashboard/: HandshakeCard.vue  LineChart.vue  Sparkline.vue  StatCard.vue
frontend/components/layout/: BrandMark.vue  MobileDrawer.vue  Sidebar.vue  Topbar.vue
frontend/components/socks5/: Socks5Form.vue
frontend/components/theme/: ThemeToggle.vue
frontend/components/tunnel/: TunnelCard.vue  TunnelExportDialog.vue  TunnelForm.vue  TunnelFormDialog.vue  TunnelFormModal.vue  TunnelImportDialog.vue  TunnelStatusBadge.vue
frontend/components/ui/: AppBadge.vue  AppButton.vue  AppCard.vue  AppDialog.vue  AppInput.vue  AppLabel.vue  AppSelect.vue  AppSpinner.vue  AppSwitch.vue  AppTextarea.vue  AppToastTray.vue  EmptyState.vue  FieldGroup.vue
frontend/components/wireguard/: WireguardForm.vue
frontend/composables/: useApi.ts  useAudit.ts  useAuth.ts  useBackup.ts  useDrawer.ts  useHandshakes.ts  useLogs.ts  useMetrics.ts  useSettings.ts  useSocks5.ts  useTheme.ts  useToast.ts  useTunables.ts  useTunnelActions.ts  useTunnels.ts  useWireguard.ts
frontend/layouts/: auth.vue  default.vue
frontend/middleware/: auth.global.ts
frontend/pages/: audit.vue  dashboard.vue  index.vue  login.vue  logs.vue  settings.vue
frontend/pages/socks5/: [id].vue  index.vue  new.vue
frontend/scripts/: build-spa-index.mjs
frontend/tests/: api.test.ts  clientFile.test.ts  format.test.ts  multiport.test.ts  tunables.test.ts  uploadMatrix.test.ts
frontend/types/: api.ts
frontend/utils/: clientFile.ts  format.ts  forwardPresets.ts  multiport.ts  pick.ts  tunables.ts  uploadMatrix.ts
scripts/: binary_loopback_check.py  build.sh  changelog.sh  check_systemd_install.sh  phase-13-restore-test.sh  setup.sh  test-setup-menus.sh
tests/acceptance/: 01_install.sh  06_brute_force.sh  07_backup_restore.sh  08_stop_delete.sh  MANUAL.md  README.md
(+6 files in other folders)
